--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,9 +5,9 @@
 
 // External libraries
 @import "bootstrap";
-@import "@popperjs/core";
 @import "font-awesome";
 
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "card";
