--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New review</h1>
-<%= simple_form_for [@movies] do |f| %>
+<%= simple_form_for [@list] do |f| %>
   <%= f.input :content %>
   <%= f.submit "Submit review", class: "btn btn-primary" %>
 <% end %>
