--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,1 +1,11 @@
-<h1>List</h1>
+<div class="container text-center">
+<h1><%= @list.name %></h1>
+<%= image_tag "bobine.jpg", width: '200 px' %>
+
+<div class="btn-style">
+          <p><%= link_to "Bookmark",  new_list_bookmark_path(@list), class: 'btn-book' %></p>
+          <p><%= link_to "Edit", edit_list_path(@list), class: 'btn-edit' %></p>
+          <p><%= link_to "Delete", edit_list_path(@list), class: 'btn-delete' %></p>
+        </div>
+
+</div>
